# rtmpstreampusher

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/godot/rtmppushstream/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  SafeQueue.h  VideoChannel.cpp  VideoChannel.h  common.cpp  common.h  livepush.cpp
app/src/main/cpp/include/x264/: x264.h
app/src/main/cpp/rtmp/: CMakeLists.txt  rtmp.c
app/src/main/java/com/godot/rtmppushstream/: Camera2Activity.java  MainActivity.java
app/src/main/java/com/godot/rtmppushstream/live/: LivePusher.java
app/src/main/java/com/godot/rtmppushstream/live/channel/: AudioChannel.java  VideoChannel.java
app/src/main/java/com/godot/rtmppushstream/live/channel/utils/: BaseCameraHelper.java  Camera2Helper.java  CameraHelper.java  CompareSizesByArea.java
app/src/main/java/com/godot/rtmppushstream/live/widgets/: AutoFitSurfaceView.java
app/src/main/res/layout/: activity_camera2.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/godot/rtmppushstream/: ExampleUnitTest.java
doc/build_script/: build_faac_android_arm.sh
gradle/wrapper/: gradle-wrapper.properties
